# sdl-boids

./: LICENSE  Makefile.am  README  clean.sh  configure.ac
art/: Makefile.am
src/: boids.c  boids.h  boids_engine.c  boids_engine.h  sdl_mirror.c  sdl_mirror.h  sdl_text.c  sdl_text.h  sdl_utils.c  sdl_utils.h  shared.h  vector.c  vector.h
